style.css
:root {
    --text: #011206;
    --background: #ffffff;
    --primary: #ffffff;
    --secondary: #ffffff;
    --accent: #ffffff;
    --success: #1ec726;
    --error: #da0000;

    --standard-margin: 5px;
}

body,
html {
    color: var(--text);
    font-size: 1.2vw;
    font-family: "Roboto", sans-serif, system-ui;
    cursor: default;
    background: var(--background);
    margin: 0;
    padding: 0;
}

body>* {
    transition: all .2s ease-in-out;
}

label {
    font-size: medium !important;
}

input,
textarea,
select,
button {
    border-radius: 10px;
    background: var(--background);
    padding: 5px;
    margin: 5px;
    color: var(--text);
}

input[type="number"] {
    width: 5vw;
}

input,
button {
    cursor: pointer;
}

textarea {
    width: max(calc(30vw - 40px), 300px);
    height: 15vh;
    resize: none;
}

.navbar {
    overflow: hidden;
    background-color: var(--secondary);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    border-radius: 0 0 20px 20px;
    background: radial-gradient(circle at top left, var(--accent) 10%, var(--secondary) 75%)
}

.navbar p {
    font-weight: bold;
    font-size: max(1.2vw, 25px);
    padding: 0 0 0 5px;
    margin: 2vh
}

#navbarButtons {
    float: left;
    /* Align links to the left */
    display: block;
    /* Make links fill the container */
    color: var(--text);
    text-align: center;
    /* Center text */
    padding: 8px 10px;
    /* Padding for the links */
    text-decoration: none;
    /* Remove underline */
    align-items: center;
    justify-content: center;
}

.material-symbols-outlined {
    font-variation-settings: 'FILL' 0, 'wght' 700, 'GRAD' 0, 'opsz' 48;
    user-select: none;
}

.settingsCategory {
    font-weight: bold;
    font-size: large;
    margin: 10px 0
}

.list {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
}

.listItem {
    display: flex;
    margin: var(--standard-margin);
    width: calc(20% - calc(2*var(--standard-margin)) - 10px);
    /* 20% width minus spacing */
    height: auto;
    align-items: center;
    padding: 5px;
}

.listItemDisplay,
.detailsDisplay,
.inputForm,
.settingsDisplay {
    background: var(--primary);
    border-radius: calc((2vh + 2vw)/2);
    padding: 0 10px;
}

.listItemDisplay {
    height: max(250px, 20vh);
    width: auto;
    text-overflow: clip;
    overflow: hidden;
    overflow-wrap: break-word;
    word-wrap: break-word;
    align-content: center;
    text-wrap: wrap;
    flex-grow: 1;
    user-select: none;
    box-shadow: 2px 2px 2px rgb(85, 85, 85);
}

.listItemDisplay:hover {
    transform: scale(1.025);
    cursor: pointer;
    transition: all .05s ease-in-out;
    filter: brightness(115%);
}

p {
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: large;
    margin: 8px
}

#addListItemButton div {
    background: var(--accent) !important;
    text-align: center;
}

.modal {
    position: absolute;
    /* Stay in place */
    align-items: center;
    justify-content: center;
    overflow: hidden;
    /* Enable scroll if needed */
    background: rgba(0, 0, 0, 0.5);
    z-index: 9998;
    width: 100vw;
    height: 100vh;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.detailsDisplay,
.inputForm,
.settingsDisplay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    padding: 20px 20px;
    width: max(30vw,350px);
    height: auto;
    align-content: center;
}

.detailsDisplay,
.settingsDisplay {
    display: none;
}

.detailsDisplay p,
.detailsDisplay h2,
.settingsDisplay p,
.settingsDisplay label {
    padding: 5px;
    border-radius: 10px;
}

.detailsSubjectText {
    text-wrap: wrap;
    overflow: hidden;
    width: auto;
}

input[type="button"]:hover,
input[type="submit"]:hover,
button:hover {
    background: var(--accent)
}

.clickable {
    cursor: pointer;
    transition: all .1s ease-in-out;
    font-size: 36px !important;
    text-decoration: none;
    color: var(--text);
    
    padding: 0 5px !important;
}

.clickable:hover {
    color: var(--accent);
    transform: scale(1.1);
}

.isImportantIsGroupWork{
    color: var(--text);
    padding: 0 5px;
    display: inline-block;
    font-size: larger;
    margin: 0;
    font-variation-settings: 'FILL' 1, 'wght' 700, 'GRAD' 0, 'opsz' 48;
    z-index: 2;
}

.subjectNameContainer{
    overflow: hidden;
    overflow-wrap: break-word;
    word-wrap: break-word;
    align-content: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
}

.subjectNameText{
    font-size: large;
    font-weight: bold;
    transform: translate(10px);
    z-index: 1
}

.detailsSubjectNameText{
    font-size: clamp(20px, 1.45vw, 28px);
    font-weight: bold;
    margin-bottom: 20px;
}

